rewrote how the download of youtube songs works, minor overall code improvements